--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,8 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
-html, body {
+html,
+body {
   margin: 0;
   border: 0;
   padding: 0;
@@ -18,4 +19,9 @@ main {
 main > h1 {
   text-align: center;
   font-size: 3.5em;
+}
+
+main > p {
+  text-align: center;
+  font-size: 1.2em;
 }
